feat(auth): Add password reset
